(library
 (name DrawCaml)
 (public_name DrawCaml)
 (foreign_stubs
  (language cxx)
  (names drawcaml window action element container)
  (flags (:include cflags) -xc++ -fPIC -std=c++17))
 (c_library_flags (:include libs) -lstdc++ -lXext))

(rule
 (targets cflags libs)
 (action (run discover/discover.exe)))
